# advent-of-code

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  aoc.py  pyproject.toml
src/: advent_of_code.py  puzzle.py  runner.py  utils.py
src/templates/: puzzle.py
src/y2024/: d01p1.py  d02p1.py  d02p2.py  d03p2.py  d04p2.py  d05p1.py  d05p2.py  d06p2.py  d07p1.py  d09p1.py  d09p2.py  d11p1.py  d11p2.py  d12p1.py  d12p2.py  d14p1.py  d14p2.py
src/y2025/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py
src/year/y2024/: d01p1.py  d01p2.py  d02p1.py  d03p1.py  d03p2.py  d04p1.py  d06p1.py  d07p1.py  d07p2.py  d08p1.py  d08p2.py  d09p1.py  d10p1.py  d10p2.py  d11p2.py  d13p1.py  d14p2.py  d15p1.py  d15p2.py  d16p1.py
src/year/y2025/: d01.py  d02.py  d03.py
templates/: input.py  puzzle.py
y2024/: d01p1.py  d01p2.py  d02p1.py  d02p2.py  d03p1.py  d03p2.py  d04p1.py  d04p2.py  d05p1.py  d05p2.py  d06p1.py  d06p2.py  d07p1.py  d07p2.py  d08p1.py  d08p2.py  d09p1.py  d09p2.py  d10p1.py  d10p2.py  d11p1.py  d12p1.py  d12p2.py  d13p1.py  d14p1.py  d14p2.py
y2024/inputs/: d02.test  d03.test
year/y2024/: d02p2.py  d04p2.py  d05p2.py  d07p2.py  d14p2.py  d15p1.py  d15p2.py
