[project]
name = "advent-of-code"
version = "1.0.0"
description = "turkoid's Advent of Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pillow>=11.0.0",
    "shapely>=2.1.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F841"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
